修改 Squashed commits: [29fb76c] fix [354e35e] fix [a6d553d] fix [dbdb3b3] fix [3e888f7] fix

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -14,6 +14,7 @@
 #product_index {
   margin-top: 20px;
   .horn{
+    width: 100%;
     h3{
       text-align: center;
       color: $color_dark_blue;
@@ -180,7 +181,7 @@
 
     .bubble {
       float: left;
-      margin-right: 5px;
+      margin: 3px;
       padding: 2px 10px;
       border-radius: 5px;
     }
@@ -418,6 +419,7 @@
       #tag{
         padding: 0 10px;
         display: block !important;
+        margin-bottom: 20px !important;
         #clear_tag{
           float: left;
         }
@@ -557,58 +559,5 @@
       width: 20% !important;
       min-width: 50px;
     }
-  }
-}
-
-
-
-@media (max-width: 1000px){
-  body{
-    background-color: rgba(0, 0, 0, 0.3) !important;
-  }
-}
-@media (max-width: 900px){
-  body{
-    background-color: rgba(255, 0, 0, 0.3) !important;
-  }
-}
-@media (max-width: 800px){
-  body{
-    background-color: rgba(0, 255, 0, 0.3) !important;
-  }
-}
-@media (max-width: 700px){
-  body{
-    background-color: rgba(0, 0, 255, 0.3) !important;
-  }
-}
-@media (max-width: 600px){
-  body{
-    background-color: rgba(255, 255, 0, 0.3) !important;
-  }
-}
-@media (max-width: 500px){
-  body{
-    background-color: rgba(0, 255, 255, 0.3) !important;
-  }
-}
-@media (max-width: 400px){
-  body{
-    background-color: rgba(255, 0, 255, 0.3) !important;
-  }
-}
-@media (max-width: 300px){
-  body{
-    background-color: rgba(100, 50, 50, 0.5) !important;
-  }
-}
-@media (max-width: 200px){
-  body{
-    background-color: rgba(50, 100, 50, 0.5) !important;
-  }
-}
-@media (max-width: 100px){
-  body{
-    background-color: rgba(50, 50, 100, 0.5) !important;
   }
 }
