--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -165,7 +165,7 @@
           font-size: 16px;
           border: 0;
           margin: 10px 0;
-          text-align: right;
+          text-align: center;
         }
         a {
           &:hover {
@@ -493,6 +493,12 @@ p.price{
 }
 
 @media (max-width: 582px){
+  .message{
+    top: 5px !important;
+  }
+  .mask {
+    background-color: rgba(0, 0, 0, 0.2) !important;
+  }
   #store_name {
     img{
       width: 100% !important;
